--- a/style.css
+++ b/style.css
@@ -87,5 +87,14 @@ i {
 @media screen and (max-width:700px) {
     .container {
         flex-direction: column;
+        gap: 65px;
+    }
+
+    .box:first-child .detail{
+        top:120px;
+    }
+
+    .box:nth-child(2) .detail {
+        top:335px;
     }
 }
