--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@
 body {
     font-family: 'poppins';
     background-color: rgb(227, 227, 227);
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 200px;
 }
 
 .container {
@@ -85,6 +85,10 @@ i {
 } 
 
 @media screen and (max-width:700px) {
+    body {
+        margin-top: 30px;
+    }
+
     .container {
         flex-direction: column;
         gap: 65px;
